--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 <body>
 
+    <button onclick="topFunction()" id="Btn" class="button" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
+
+
     <div id="regestration" class="modal">
         <div class="modal-content">
             <button class="close" onclick="closeForm()">&times;</button>
@@ -409,7 +412,7 @@
                 width="100%" height="450" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
         </div> -->
     </main>
-    <!-- <footer>
+    <footer>
         <section id="Sponsors" class="container">
             <div class="Sponsors">
                 <h2>Sponsors</h2>
@@ -455,7 +458,7 @@
             Copyright ©2022 All rights reserved
             <a href="https://www.microclub.net">@MicroClub</a>
         </p>
-    </footer>  -->
+    </footer> 
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./owl/owl.carousel.min.js"></script>
     <script src="./js/script.js"></script>
